[package]
name = "rust-actix-ip-filter"
version = "0.1.0"
authors = ["mikong <michaelgalero@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-files = "0.1.4"
actix-web = "1.0"
actix-web-actors = "1.0.2"
diesel = { version = "1.4.2", features = ["mysql", "chrono"] }
dotenv = "0.11"
chrono = { version = "0.4.9", features = ["serde"] }
serde = "1.0"
